--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
 - name: "gcr.io/cloud-builders/docker"
-  args: ["build", "-t", "gcr.io/automatedcicd-gcp/mounica-python-web-app:$COMMIT_SHA", "."]
-#images: ["gcr.io/automatedcicd-gcp/mounica-python-web-app:$COMMIT_SHA"]
+  args: ["build", "-t", "us-central1-docker.pkg.dev/automated-cicd-gcp/cicdpipeline/mounica-python-web-app:$COMMIT_SHA", "."]
+  # images: ["us-central1-docker.pkg.dev/automated-cicd-gcp/cicdpipeline/mounica-python-web-app:$COMMIT_SHA"]
 
 # - name: "gcr.io/cloud-builders/gcloud"
 #   args: ["container", "images", "add-tag", "gcr.io/automatedcicd-gcp/mounica-python-web-app:$COMMIT_SHA", "gcr.io/automatedcicd-gcp/mounica-python-web-app:latest"]
